doc/logfile.txt
Class documentation
<---- javadoc command: ---->
javadoc
-author
-version
-nodeprecated
-package
-Xdoclint:none
-noindex
-notree
-nohelp
-nonavbar
-source
17
-classpath
/Applications/BlueJ.app/Contents/Java/bluejcore.jar:/Applications/BlueJ.app/Contents/Java/javafx-base-20.0.1.jar:/Applications/BlueJ.app/Contents/Java/javafx-graphics-20.0.1.jar:/Applications/BlueJ.app/Contents/Java/javafx-controls-20.0.1.jar:/Applications/BlueJ.app/Contents/Java/javafx-fxml-20.0.1-mac.jar:/Applications/BlueJ.app/Contents/Java/javafx-controls-20.0.1-mac.jar:/Applications/BlueJ.app/Contents/Java/javafx-web-20.0.1-mac.jar:/Applications/BlueJ.app/Contents/Java/javafx-media-20.0.1.jar:/Applications/BlueJ.app/Contents/Java/javafx-base-20.0.1-mac.jar:/Applications/BlueJ.app/Contents/Java/javafx-media-20.0.1-mac.jar:/Applications/BlueJ.app/Contents/Java/javafx-graphics-20.0.1-mac.jar:/Applications/BlueJ.app/Contents/Java/javafx-swing-20.0.1-mac.jar:/Applications/BlueJ.app/Contents/Java/junit-4.12.jar:/Applications/BlueJ.app/Contents/Java/junit-jupiter-params-5.5.2.jar:/Applications/BlueJ.app/Contents/Java/junit-jupiter-api-5.5.2.jar:/Applications/BlueJ.app/Contents/Java/junit-jupiter-engine-5.5.2.jar:/Applications/BlueJ.app/Contents/Java/junit-platform-suite-api-1.5.2.jar:/Applications/BlueJ.app/Contents/Java/junit-vintage-engine-5.5.2.jar:/Applications/BlueJ.app/Contents/Java/junit-jupiter-5.5.2.jar:/Applications/BlueJ.app/Contents/Java/junit-platform-engine-1.5.2.jar:/Applications/BlueJ.app/Contents/Java/junit-platform-launcher-1.5.2.jar:/Applications/BlueJ.app/Contents/Java/junit-platform-commons-1.5.2.jar:/Applications/BlueJ.app/Contents/Java/hamcrest-core-1.3.jar:/Applications/BlueJ.app/Contents/Java/opentest4j-1.2.0.jar:/Applications/BlueJ.app/Contents/Java/lang-stride.jar:/Users/florianberger/Desktop/Uni/0_Master/Uni_2023_24/1. Semester/Grundlagen Business Innovation/Programmierprojekt/theproco19
-d
/Users/florianberger/Desktop/Uni/0_Master/Uni_2023_24/1. Semester/Grundlagen Business Innovation/Programmierprojekt/theproco19/doc
-encoding
UTF-8
-charset
UTF-8
/Users/florianberger/Desktop/Uni/0_Master/Uni_2023_24/1. Semester/Grundlagen Business Innovation/Programmierprojekt/theproco19/Lager.java
<---- end of javadoc command ---->
Loading source file /Users/florianberger/Desktop/Uni/0_Master/Uni_2023_24/1. Semester/Grundlagen Business Innovation/Programmierprojekt/theproco19/Lager.java...
Constructing Javadoc information...
/Users/florianberger/Desktop/Uni/0_Master/Uni_2023_24/1. Semester/Grundlagen Business Innovation/Programmierprojekt/theproco19/Lager.java:296: error: method gibMaxHolzeinheiten() is already defined in class Lager
    public int gibMaxHolzeinheiten() {
               ^
/Users/florianberger/Desktop/Uni/0_Master/Uni_2023_24/1. Semester/Grundlagen Business Innovation/Programmierprojekt/theproco19/Lager.java:304: error: method gibMaxHolzeinheiten() is already defined in class Lager
    public int gibMaxHolzeinheiten() {
               ^
/Users/florianberger/Desktop/Uni/0_Master/Uni_2023_24/1. Semester/Grundlagen Business Innovation/Programmierprojekt/theproco19/Lager.java:312: error: method gibMaxHolzeinheiten() is already defined in class Lager
    public int gibMaxHolzeinheiten() {
               ^
/Users/florianberger/Desktop/Uni/0_Master/Uni_2023_24/1. Semester/Grundlagen Business Innovation/Programmierprojekt/theproco19/Lager.java:320: error: method gibMaxHolzeinheiten() is already defined in class Lager
    public int gibMaxHolzeinheiten() {
               ^
4 errors
